AI model added
Flask API added